--- a/Pages/Rangsit/IndexRangsit.cshtml
+++ b/Pages/Rangsit/IndexRangsit.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
-@model test1.Pages.Rangsit.IndexRangsitModel
+@model InventoryDarunpob.Pages.Rangsit.IndexRangsitModel
 @{
 }
 
-<a class="btn btn alert-primary btn-sn" href="/Rangsit/CreateRangsit">New item</a></a>
+<a class="btn btn col-sm-3 alert-primary btn-sn" href="/Rangsit/CreateRangsit">New item</a></a>
 <table class="table">
 	<thread>
 		<tr>
