--- a/Pages/Rangsit/EditRangsit.cshtml
+++ b/Pages/Rangsit/EditRangsit.cshtml
@@ -2,7 +2,9 @@
 @model test1.Pages.Rangsit.EditRangsitModel
 @{
 }
-
+@{
+	ViewData["Title"] = "Inventory System Home Page";
+}
 <br />
 <h2>Edir Item</h2>
 
