--- a/Pages/Siam/IndexSiam.cshtml
+++ b/Pages/Siam/IndexSiam.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model InventoryDarunpob.Pages.Rangsit.IndexRangsitModel
+@model InventoryDarunpob.Pages.Siam.IndexSiamModel
 @{
 }
 @{
 	ViewData["Title"] = "Inventory System Home Page";
 }
-<a class="btn btn col-sm-3 alert-primary btn-sn" href="/Rangsit/CreateRangsit">New item</a></a>
+<a class="btn btn col-sm-3 alert-primary btn-sn" href="/Siam/CreateSiam">New item</a></a>
 <table class="table">
 	<thread>
 		<tr>
@@ -29,13 +29,11 @@
 				<td>@item.amount</td>
 				<td>@item.create_at</td>
 				<td>
-					<a class="btn btn-primary btn-sm" href="/Rangsit/EditRangsit?itemid=@item.itemid">Edit</a>
-					<a class="btn btn-danger btn-sm" href="/Rangsit/DeleteRangsit?itemid=@item.itemid">Delete</a>
+					<a class="btn btn-primary btn-sm" href="/Siam/EditSiam?itemid=@item.itemid">Edit</a>
+					<a class="btn btn-danger btn-sm" href="/Siam/DeleteSiam?itemid=@item.itemid">Delete</a>
 				</td>
 			</tr>
 
 		}
 	<tbody>
 </table>
-
-
