--- a/Pages/Siam/EditSiam.cshtml
+++ b/Pages/Siam/EditSiam.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
-@model test1.Pages.Rangsit.CreateRangsitModel
+@model test1.Pages.Siam.EditSiamModel
 @{
 }
 @{
 	ViewData["Title"] = "Inventory System Home Page";
 }
 <br />
-<h2>New Item</h2>
+<h2>Edir Item</h2>
 
 @if (Model.errorMessage.Length > 0)
 {
@@ -15,9 +15,9 @@
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 }
-
 <form method="POST">
 	<input type="hidden" name="itemid" value="@Model.stockInfo.itemid" />
+
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Item</label>
 		<div class="col-sm-6">
@@ -60,7 +60,7 @@
 			<button type="submit" class="btn-primary">Submit</button>
 		</div>
 		<div class="col-sm-3 d-grid">
-				<a class="btn btn-outline=primary" href="/Rangsit/IndexRangsit" role="button">Cancle</a>
+			<a class="btn btn-outline=primary" href="/Siam/IndexSiam" role="button">Cancle</a>
 		</div>
 	</div>
 
